--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,7 @@
-:root {
+@import "tailwindcss";
+@tailwind utilities;
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -87,4 +90,4 @@ code {
   code {
     background-color: #f9f9f9;
   }
-}
+} */
